[package]
name = "rapimt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
# Remember to enable this for a great improvement
# opt-level = 3
overflow-checks = false

[workspace]
members = ["crates/*"]

[[bin]]
doc = false
name = "rimt"
path = "crates/cli/src/bin/rimt.rs"
