[package]
name = "rapimt"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
# Remember to enable this for a great improvement
# opt-level = 3
overflow-checks = false

[workspace]
members = ["crates/*"]

[workspace.dependencies]
fxhash = "0.2.1"
nom = "7"
indexmap = "2.2.5"
bitvec = "1"
RuDDy = { git = "https://github.com/CrackedPoly/RuDDy.git", features = [
  "default",
] }

[dependencies]
rapimt_internal = { path = "crates/rapimt_internal" }

[features]
default = ["dip"]
dip = ["rapimt_internal/dip"]
sip = ["rapimt_internal/sip"]
dport = ["rapimt_internal/dport"]
sport = ["rapimt_internal/sport"]
tag = ["rapimt_internal/tag"]

[[bin]]
doc = false
name = "rimt"
path = "crates/rapimt_cli/src/bin/rimt.rs"
