[package]
name = "rapimt_im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = { workspace = true }
rapimt_core = { path = "../rapimt_core" }
rapimt_io = { path = "../rapimt_io" }
rapimt_tpt = { path = "../rapimt_tpt" }

[[example]]
name = "stanford"
path = "examples/stanford/stanford.rs"
