[package]
name = "rapimt_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = { workspace = true }
nom = { workspace = true }
indexmap = { workspace = true }
rapimt_core = { path = "../rapimt_core" }
