[package]
name = "rapimt_tpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
graphviz-rust = { version = "0.9.0", optional = true }
rapimt_core = { path = "../rapimt_core" }

[features]
default = []
graphviz = ["dep:graphviz-rust"]
