[package]
name = "rapimt-tpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
graphviz-rust = { version = "0.9.0", optional = true }
rapimt-core = { path = "../core" }

[features]
default = []
graphviz = ["dep:graphviz-rust"]
